php/php.blade/src/org/netbeans/modules/php/blade/syntax/antlr4/php/BladePhpAntlrParser.java
// Generated from BladePhpAntlrParser.g4 by ANTLR 4.13.0

  package org.netbeans.modules.php.blade.syntax.antlr4.php;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class BladePhpAntlrParser extends ParserAdaptor {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		HTML=1, BLADE_COMMENT=2, LINE_COMMENT=3, ARRAY=4, AS=5, ECHO=6, IF=7, 
		ELSEIF=8, ELSE=9, NEW=10, CLASS=11, FUNCTION=12, LANG_CONSTRUCT=13, MATCH=14, 
		FOREACH=15, COMMA=16, LPAREN=17, RPAREN=18, LSQUAREBRACKET=19, RSQUAREBRACKET=20, 
		LCURLYBRACE=21, RCURLYBRACE=22, IDENTIFIER=23, PHP_VARIABLE=24, DOLLAR=25, 
		NAMESPACE_SEPARATOR=26, DOUBLE_COLON=27, ARROW=28, OBJECT_OPERATOR=29, 
		SEMI_COLON=30, COMPARISON_OPERATOR=31, LOGICAL_UNION_OPERATOR=32, STRING_LITERAL=33, 
		STYLE_COMMENT=34, WS=35, PHP_DIRECTIVE=36, OTHER=37, BLADE_COMMENT_START=38, 
		EMAIL_SUBSTRING=39, VERSION_WITH_AT=40, BLADE_COMMENT_END=41, BLADE_COMMENT_PEEK=42, 
		BLADE_COMMENT_MORE=43, BLADE_COMMENT_EOF=44;
	public static final int
		RULE_expression = 0, RULE_exprStatement = 1, RULE_logicalStatement = 2, 
		RULE_ifStatement = 3, RULE_inputExpr = 4, RULE_functionalExpr = 5, RULE_classExpression = 6, 
		RULE_foreachDirectiveStatement = 7, RULE_foreachArguments = 8, RULE_classInstanceStatement = 9, 
		RULE_matchStatement = 10, RULE_staticClassReference = 11, RULE_staticMethodAccess = 12, 
		RULE_staticFieldAccess = 13, RULE_staticAccess = 14, RULE_aliasDirectAccess = 15, 
		RULE_classMember = 16, RULE_directMethodAccess = 17, RULE_directAccess = 18, 
		RULE_functionExpr = 19, RULE_arguments = 20, RULE_namespace = 21, RULE_argument = 22, 
		RULE_array = 23, RULE_array_key_item = 24, RULE_array_child = 25, RULE_varExpr = 26, 
		RULE_misc = 27, RULE_output = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"expression", "exprStatement", "logicalStatement", "ifStatement", "inputExpr", 
			"functionalExpr", "classExpression", "foreachDirectiveStatement", "foreachArguments", 
			"classInstanceStatement", "matchStatement", "staticClassReference", "staticMethodAccess", 
			"staticFieldAccess", "staticAccess", "aliasDirectAccess", "classMember", 
			"directMethodAccess", "directAccess", "functionExpr", "arguments", "namespace", 
			"argument", "array", "array_key_item", "array_child", "varExpr", "misc", 
			"output"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'array'", "'as'", "'echo'", "'if'", null, "'else'", 
			"'new'", "'class'", "'function'", null, "'match'", "'foreach'", "','", 
			"'('", "')'", "'['", "']'", "'{'", "'}'", null, null, "'$'", "'\\'", 
			"'::'", "'=>'", "'->'", "';'", null, null, null, null, null, null, null, 
			"'{{--'", null, null, "'--}}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "HTML", "BLADE_COMMENT", "LINE_COMMENT", "ARRAY", "AS", "ECHO", 
			"IF", "ELSEIF", "ELSE", "NEW", "CLASS", "FUNCTION", "LANG_CONSTRUCT", 
			"MATCH", "FOREACH", "COMMA", "LPAREN", "RPAREN", "LSQUAREBRACKET", "RSQUAREBRACKET", 
			"LCURLYBRACE", "RCURLYBRACE", "IDENTIFIER", "PHP_VARIABLE", "DOLLAR", 
			"NAMESPACE_SEPARATOR", "DOUBLE_COLON", "ARROW", "OBJECT_OPERATOR", "SEMI_COLON", 
			"COMPARISON_OPERATOR", "LOGICAL_UNION_OPERATOR", "STRING_LITERAL", "STYLE_COMMENT", 
			"WS", "PHP_DIRECTIVE", "OTHER", "BLADE_COMMENT_START", "EMAIL_SUBSTRING", 
			"VERSION_WITH_AT", "BLADE_COMMENT_END", "BLADE_COMMENT_PEEK", "BLADE_COMMENT_MORE", 
			"BLADE_COMMENT_EOF"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BladePhpAntlrParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BladePhpAntlrParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(BladePhpAntlrParser.EOF, 0); }
		public List<ExprStatementContext> exprStatement() {
			return getRuleContexts(ExprStatementContext.class);
		}
		public ExprStatementContext exprStatement(int i) {
			return getRuleContext(ExprStatementContext.class,i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BladePhpAntlrParserListener ) ((BladePhpAntlrParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BladePhpAntlrParserListener ) ((BladePhpAntlrParserListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expression);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(58);
					exprStatement();
					}
					} 
				}
				setState(63);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(64);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprStatementContext extends ParserRuleContext {
		public TerminalNode SEMI_COLON() { return getToken(BladePhpAntlrParser.SEMI_COLON, 0); }
		public TerminalNode LCURLYBRACE() { return getToken(BladePhpAntlrParser.LCURLYBRACE, 0); }
		public TerminalNode RCURLYBRACE() { return getToken(BladePhpAntlrParser.RCURLYBRACE, 0); }
		public List<ExprStatementContext> exprStatement() {
			return getRuleContexts(ExprStatementContext.class);
		}
		public ExprStatementContext exprStatement(int i) {
			return getRuleContext(ExprStatementContext.class,i);
		}
		public TerminalNode LPAREN() { return getToken(BladePhpAntlrParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(BladePhpAntlrParser.RPAREN, 0); }
		public TerminalNode COMPARISON_OPERATOR() { return getToken(BladePhpAntlrParser.COMPARISON_OPERATOR, 0); }
		public TerminalNode LOGICAL_UNION_OPERATOR() { return getToken(BladePhpAntlrParser.LOGICAL_UNION_OPERATOR, 0); }
		public List<FunctionalExprContext> functionalExpr() {
			return getRuleContexts(FunctionalExprContext.class);
		}
		public FunctionalExprContext functionalExpr(int i) {
			return getRuleContext(FunctionalExprContext.class,i);
		}
		public TerminalNode FOREACH() { return getToken(BladePhpAntlrParser.FOREACH, 0); }
		public ForeachArgumentsContext foreachArguments() {
			return getRuleContext(ForeachArgumentsContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ForeachDirectiveStatementContext foreachDirectiveStatement() {
			return getRuleContext(ForeachDirectiveStatementContext.class,0);
		}
		public OutputContext output() {
			return getRuleContext(OutputContext.class,0);
		}
		public MiscContext misc() {
			return getRuleContext(MiscContext.class,0);
		}
		public ExprStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BladePhpAntlrParserListener ) ((BladePhpAntlrParserListener)listener).enterExprStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BladePhpAntlrParserListener ) ((BladePhpAntlrParserListener)listener).exitExprStatement(this);
		}
	}

	public final ExprStatementContext exprStatement() throws RecognitionException {
		ExprStatementContext _localctx = new ExprStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exprStatement);
		try {
			int _alt;
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				match(SEMI_COLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				match(LCURLYBRACE);
				setState(71);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(68);
						exprStatement();
						}
						} 
					}
					setState(73);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				setState(74);
				match(RCURLYBRACE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				match(LPAREN);
				setState(79);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(76);
						exprStatement();
						}
						} 
					}
					setState(81);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(82);
				match(RPAREN);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				match(COMPARISON_OPERATOR);
				setState(84);
				exprStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(85);
				match(LOGICAL_UNION_OPERATOR);
				setState(87); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(86);
						functionalExpr();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(89); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(91);
				match(FOREACH);
				setState(92);
				match(LPAREN);
				setState(93);
				foreachArguments();
				setState(94);
				match(RPAREN);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(96);
				functionalExpr();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(97);
				ifStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(98);
				foreachDirectiveStatement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(99);
				output();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(100);
				misc();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicalStatementContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(BladePhpAntlrParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(BladePhpAntlrParser.RPAREN, 0); }
		public List<FunctionalExprContext> functionalExpr() {
			return getRuleContexts(FunctionalExprContext.class);
		}
		public FunctionalExprContext functionalExpr(int i) {
			return getRuleContext(FunctionalExprContext.class,i);
		}
		public List<TerminalNode> LOGICAL_UNION_OPERATOR() { return getTokens(BladePhpAntlrParser.LOGICAL_UNION_OPERATOR); }
		public TerminalNode LOGICAL_UNION_OPERATOR(int i) {
			return getToken(BladePhpAntlrParser.LOGICAL_UNION_OPERATOR, i);
		}
		public List<TerminalNode> COMPARISON_OPERATOR() { return getTokens(BladePhpAntlrParser.COMPARISON_OPERATOR); }
		public TerminalNode COMPARISON_OPERATOR(int i) {
			return getToken(BladePhpAntlrParser.COMPARISON_OPERATOR, i);
		}
		public LogicalStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BladePhpAntlrParserListener ) ((BladePhpAntlrParserListener)listener).enterLogicalStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BladePhpAntlrParserListener ) ((BladePhpAntlrParserListener)listener).exitLogicalStatement(this);
		}
	}

	public final LogicalStatementContext logicalStatement() throws RecognitionException {
		LogicalStatementContext _localctx = new LogicalStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_logicalStatement);
		int _la;
		try {
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				match(LPAREN);
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 9253184528L) != 0)) {
					{
					{
					setState(104);
					functionalExpr();
					}
					}
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(110);
				match(RPAREN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				functionalExpr();
				setState(114); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(112);
					match(LOGICAL_UNION_OPERATOR);
					setState(113);
					functionalExpr();
					}
					}
					setState(116); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==LOGICAL_UNION_OPERATOR );
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				functionalExpr();
				setState(121); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(119);
					match(COMPARISON_OPERATOR);
					setState(120);
					functionalExpr();
					}
					}
					setState(123); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==COMPARISON_OPERATOR );
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(125);
				functionalExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(BladePhpAntlrParser.IF, 0); }
		public List<TerminalNode> LPAREN() { return getTokens(BladePhpAntlrParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(BladePhpAntlrParser.LPAREN, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(BladePhpAntlrParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(BladePhpAntlrParser.RPAREN, i);
		}
		public List<TerminalNode> LCURLYBRACE() { return getTokens(BladePhpAntlrParser.LCURLYBRACE); }
		public TerminalNode LCURLYBRACE(int i) {
			return getToken(BladePhpAntlrParser.LCURLYBRACE, i);
		}
		public List<TerminalNode> RCURLYBRACE() { return getTokens(BladePhpAntlrParser.RCURLYBRACE); }
		public TerminalNode RCURLYBRACE(int i) {
			return getToken(BladePhpAntlrParser.RCURLYBRACE, i);
		}
		public List<LogicalStatementContext> logicalStatement() {
			return getRuleContexts(LogicalStatementContext.class);
		}
		public LogicalStatementContext logicalStatement(int i) {
			return getRuleContext(LogicalStatementContext.class,i);
		}
		public List<ExprStatementContext> exprStatement() {
			return getRuleContexts(ExprStatementContext.class);
		}
		public ExprStatementContext exprStatement(int i) {
			return getRuleContext(ExprStatementContext.class,i);
		}
		public List<TerminalNode> ELSEIF() { return getTokens(BladePhpAntlrParser.ELSEIF); }
		public TerminalNode ELSEIF(int i) {
			return getToken(BladePhpAntlrParser.ELSEIF, i);
		}
		public TerminalNode ELSE() { return getToken(BladePhpAntlrParser.ELSE, 0); }
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BladePhpAntlrParserListener ) ((BladePhpAntlrParserListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BladePhpAntlrParserListener ) ((BladePhpAntlrParserListener)listener).exitIfStatement(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ifStatement);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(IF);
			setState(129);
			match(LPAREN);
			setState(131); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(130);
				logicalStatement();
				}
				}
				setState(133); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 9253315600L) != 0) );
			setState(135);
			match(RPAREN);
			setState(136);
			match(LCURLYBRACE);
			setState(140);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(137);
					exprStatement();
					}
					} 
				}
				setState(142);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(143);
			match(RCURLYBRACE);
			setState(163);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(144);
					match(ELSEIF);
					setState(145);
					match(LPAREN);
					setState(147); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(146);
						logicalStatement();
						}
						}
						setState(149); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 9253315600L) != 0) );
					setState(151);
					match(RPAREN);
					setState(152);
					match(LCURLYBRACE);
					setState(156);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(153);
							exprStatement();
							}
							} 
						}
						setState(158);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
					}
					setState(159);
					match(RCURLYBRACE);
					}
					} 
				}
				setState(165);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			setState(175);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(166);
				match(ELSE);
				setState(167);
				match(LCURLYBRACE);
				setState(171);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(168);
						exprStatement();
						}
						} 
					}
					setState(173);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				}
				setState(174);
				match(RCURLYBRACE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputExprContext extends ParserRuleContext {
		public VarExprContext varExpr() {
			return getRuleContext(VarExprContext.class,0);
		}
		public InputExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BladePhpAntlrParserListener ) ((BladePhpAntlrParserListener)listener).enterInputExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BladePhpAntlrParserListener ) ((BladePhpAntlrParserListener)listener).exitInputExpr(this);
		}
	}

	public final InputExprContext inputExpr() throws RecognitionException {
		InputExprContext _localctx = new InputExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_inputExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			varExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionalExprContext extends ParserRuleContext {
		public MatchStatementContext matchStatement() {
			return getRuleContext(MatchStatementContext.class,0);
		}
		public ClassExpressionContext classExpression() {
			return getRuleContext(ClassExpressionContext.class,0);
		}
		public List<ClassMemberContext> classMember() {
			return getRuleContexts(ClassMemberContext.class);
		}
		public ClassMemberContext classMember(int i) {
			return getRuleContext(ClassMemberContext.class,i);
		}
		public FunctionExprContext functionExpr() {
			return getRuleContext(FunctionExprContext.class,0);
		}
		public TerminalNode LANG_CONSTRUCT() { return getToken(BladePhpAntlrParser.LANG_CONSTRUCT, 0); }
		public TerminalNode LPAREN() { return getToken(BladePhpAntlrParser.LPAREN, 0); }
		public FunctionalExprContext functionalExpr() {
			return getRuleContext(FunctionalExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(BladePhpAntlrParser.RPAREN, 0); }
		public InputExprContext inputExpr() {
			return getRuleContext(InputExprContext.class,0);
		}
		public FunctionalExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionalExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BladePhpAntlrParserListener ) ((BladePhpAntlrParserListener)listener).enterFunctionalExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BladePhpAntlrParserListener ) ((BladePhpAntlrParserListener)listener).exitFunctionalExpr(this);
		}
	}
